Finish client endpoints
